--- a/clock-gears.tex
+++ b/clock-gears.tex
@@ -17,8 +17,12 @@
 
 \section{Intro}
 
+
 %\subsection{Foo}
 
+\section{License}
+This work is licensed under the Creative Commons Attribution-ShareAlike 4.0 International License.
 
+To view a copy of this license, visit http://creativecommons.org/licenses/by-sa/4.0/
 
 \end{document}  
